# octos

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release-dispatch.yml
crates/app-skills/deep-crawl/: SKILL.md
crates/crew-agent/: Cargo.toml
crates/crew-agent/src/: agent.rs  bootstrap.rs  builtin_skills.rs  bundled_app_skills.rs  compaction.rs  hooks.rs  lib.rs  mcp.rs  progress.rs  prompt_guard.rs  sandbox.rs  sanitize.rs  skills.rs
crates/crew-agent/tests/: integration.rs  multi_model.rs
crates/crew-bus/: Cargo.toml
crates/crew-bus/src/: bus.rs  channel.rs  coalesce.rs  cron_service.rs  cron_types.rs  discord_channel.rs  feishu_channel.rs  heartbeat.rs  lib.rs  media.rs  session.rs  slack_channel.rs  telegram_channel.rs  twilio_channel.rs  whatsapp_channel.rs
crates/crew-cli/: Cargo.toml
crates/crew-cli/src/: compaction.rs  config.rs  config_watcher.rs  cron_tool.rs  main.rs  otp.rs  process_manager.rs  profiles.rs  session_actor.rs  status_indicator.rs  stream_reporter.rs  updater.rs
crates/crew-cli/src/api/: admin.rs  auth_handlers.rs  handlers.rs  metrics.rs  mod.rs  router.rs  sse.rs  static_files.rs  user_admin.rs  webhook_proxy.rs
crates/crew-cli/src/auth/: store.rs
crates/crew-cli/src/commands/: account.rs  auth.rs  channels.rs  chat.rs  clean.rs  cron.rs  gateway.rs  init.rs  mod.rs  resume.rs  run.rs  serve.rs  skills.rs  status.rs
crates/crew-cli/src/commands/gateway/: account_handler.rs  mod.rs  prompt.rs  session_ui.rs  transcription.rs
crates/crew-cli/src/prompts/: admin_default.txt
crates/crew-cli/src/tools/: switch_model.rs
crates/crew-cli/static/admin/: index.html
crates/crew-cli/static/admin/assets/: index-D-ZrWtaF.js  index-jzFuNRD3.css
crates/crew-cli/tests/: cli_tests.rs
crates/crew-core/: Cargo.toml
crates/crew-core/src/: error.rs  lib.rs  task.rs  types.rs
crates/crew-llm/: Cargo.toml
crates/crew-llm/src/: adaptive.rs  anthropic.rs  config.rs  context.rs  error.rs  gemini.rs  lib.rs  ominix.rs  openai.rs  openrouter.rs  pricing.rs  provider.rs  retry.rs  transcription.rs  vision.rs
crates/crew-memory/: Cargo.toml
crates/crew-memory/src/: episode.rs  hybrid_search.rs  lib.rs  memory_store.rs  store.rs
crates/crew-pipeline/src/: graph.rs  manager.rs
crates/octos-agent/src/: bootstrap.rs  compaction.rs  event_bus.rs  exec_env.rs  lib.rs  loop_detect.rs  policy.rs  prompt_guard.rs  prompt_layer.rs  sandbox.rs  session.rs  (+2 more)
dashboard/: tsconfig.tsbuildinfo
dashboard/src/: App.tsx  api.ts  types.ts
docs/: ARCHITECTURE.md  PRD.md  SECURITY_ARCHITECTURE.md  SESSION_ACTOR_ARCHITECTURE.md  USER_MANUAL.md  app-skill-dev-guide.md  octos-vs-openclaw-outline.md
scripts/: deploy.sh  pre-release.sh
(+165 files in other folders)
