[package]
name = "crew-bus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Message bus, channels, and session management for crew-rs gateway"

[features]
default = []
telegram = ["teloxide"]
discord = ["serenity"]
slack = ["tokio-tungstenite", "reqwest"]
whatsapp = ["tokio-tungstenite"]
feishu = ["tokio-tungstenite", "reqwest"]

[dependencies]
crew-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }

# Optional: channel integrations
teloxide = { workspace = true, optional = true }
serenity = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
